--- a/Instructions/10979F_LAB_AK_06.md
+++ b/Instructions/10979F_LAB_AK_06.md
@@ -39,7 +39,7 @@
 
 1. On the **Tags** tab of the **Create storage account** blade, accept the default settings and click **Next: Review + create**.
 
-1. On the **Review + create** tab of the **Create a virtual machine** blade, review the list of settings and click **Create**.
+1. On the **Review + create** tab of the **Create a storage account** blade, review the list of settings and click **Create**.
 
 1. Review the **Your deployment is underway** blade. 
 
